--- a/Lesson5/WebApplication1/appsettings.Development.json
+++ b/Lesson5/WebApplication1/appsettings.Development.json
@@ -1,13 +1,8 @@
 {
   "Logging": {
-    "Console": {
+    "CustomFileLogger": {
       "LogLevel": {
         "Default": "Information"
-      }
-    },
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
       }
     },
     "LogLevel": {
